--- a/.ci.yml
+++ b/.ci.yml
@@ -25,7 +25,6 @@ steps:
        from_secret: BUILD_USER
      BUILD_HOST:
        from_secret: BUILD_HOST
-   clang:
+   commands:
      - bash kernel_build.sh
-   gcc:
      - bash gcc_build.sh
