--- a/.ci.yml
+++ b/.ci.yml
@@ -27,5 +27,4 @@ steps:
        from_secret: BUILD_HOST
    commands:
      - bash clang_build.sh
-     - bash gcc_build.sh
-     - bash kernel_build.sh
+     - bash google_build.sh
