--- a/.ci.yml
+++ b/.ci.yml
@@ -27,3 +27,7 @@ steps:
        from_secret: BUILD_HOST
    commands:
      - bash clang_build.sh
+     - rm -rf merlin/out
+     - rm -rf clang
+     - rm -rf AnyKernel
+     - bash clang_build.sh
