--- a/.ci.yml
+++ b/.ci.yml
@@ -27,8 +27,16 @@ steps:
        from_secret: BUILD_HOST
    commands:
      - bash clang_build.sh
-     - sleep 25s
-     - rm -rf merlin
+     - rm -rf merlin/out
      - rm -rf clang
-     - rm -rf AnyKernel
-     - bash google_build.sh
+     - bash proton11_build.sh
+     - rm -rf merlin/out
+     - rm -rf clang
+     - bash dtc10_build.sh
+     - rm -rf merlin/out
+     - rm -rf clang
+     - bash dtc9_build.sh
+     - rm -rf merlin/out
+     - rm -rf clang
+     - bash dtc10_build.sh
+
