--- a/.ci.yml
+++ b/.ci.yml
@@ -26,16 +26,16 @@ steps:
      BUILD_HOST:
        from_secret: BUILD_HOST
    commands:
-     - bash clang_build.sh
-     - rm -rf merlin
-     - rm -rf clang
-     - rm -rf AnyKernel
-     - sleep 25s
-     - bash proton11_build.sh
-     - rm -rf merlin
-     - rm -rf clang
-     - rm -rf AnyKernel
-     - sleep 25s
+#     - bash clang_build.sh
+#     - rm -rf merlin
+#     - rm -rf clang
+#     - rm -rf AnyKernel
+#     - sleep 25s
+#     - bash proton11_build.sh
+#     - rm -rf merlin
+#     - rm -rf clang
+#     - rm -rf AnyKernel
+#     - sleep 25s
      - bash gcc_build.sh
 #     - bash dtc10_build.sh
 #     - rm -rf merlin
