--- a/.ci.yml
+++ b/.ci.yml
@@ -26,26 +26,25 @@ steps:
      BUILD_HOST:
        from_secret: BUILD_HOST
    commands:
-#     - bash clang_build.sh
-#     - rm -rf merlin
-#     - rm -rf clang
-#     - rm -rf AnyKernel
-#     - sleep 25s
-#     - bash proton11_build.sh
-#     - rm -rf merlin
-#     - rm -rf clang
-#     - rm -rf AnyKernel
-#     - sleep 25s
-     - bash gcc_build.sh
-#     - bash dtc10_build.sh
-#     - rm -rf merlin
-#     - rm -rf clang
-#     - rm -rf AnyKernel
-#     - sleep 25s
-#     - bash dtc9_build.sh
-#     - rm -rf merlin
-#     - rm -rf clang
-#     - rm -rf AnyKernel
-#     - sleep 25s
-#     - bash dtc8_build.sh
+     - bash clang_build.sh
+     - rm -rf merlin
+     - rm -rf clang
+     - rm -rf AnyKernel
+     - sleep 10s
+     - bash proton11_build.sh
+     - rm -rf merlin
+     - rm -rf clang
+     - rm -rf AnyKernel
+     - sleep 10s
+     - bash dtc10_build.sh
+     - rm -rf merlin
+     - rm -rf clang
+     - rm -rf AnyKernel
+     - sleep 10s
+     - bash dtc9_build.sh
+     - rm -rf merlin
+     - rm -rf clang
+     - rm -rf AnyKernel
+     - sleep 10s
+     - bash dtc8_build.sh
 
