--- a/.ci.yml
+++ b/.ci.yml
@@ -37,14 +37,14 @@ steps:
      - rm -rf AnyKernel
      - sleep 10s
      - bash dtc10_build.sh
-     - rm -rf merlin
-     - rm -rf clang
-     - rm -rf AnyKernel
-     - sleep 10s
-     - bash dtc9_build.sh
-     - rm -rf merlin
-     - rm -rf clang
-     - rm -rf AnyKernel
-     - sleep 10s
-     - bash dtc8_build.sh
+#     - rm -rf merlin
+#     - rm -rf clang
+#     - rm -rf AnyKernel
+#     - sleep 10s
+#     - bash dtc9_build.sh
+#     - rm -rf merlin
+#     - rm -rf clang
+#     - rm -rf AnyKernel
+#     - sleep 10s
+#     - bash dtc8_build.sh
 
