--- a/.ci.yml
+++ b/.ci.yml
@@ -27,6 +27,7 @@ steps:
        from_secret: BUILD_HOST
    commands:
      - bash clang_gcc.sh
+     - sleep 10s
      - bash g_build.sh
 #     - rm -rf merlin
 #     - rm -rf clang
