--- a/.ci.yml
+++ b/.ci.yml
@@ -33,6 +33,13 @@ steps:
      - rm -rf GCC32
      - rm -rf AnyKernel
      - sleep 10s
+     - bash Sdclang_build.sh
+     - rm -rf merlin
+     - rm -rf clang
+     - rm -rf GCC64
+     - rm -rf GCC32
+     - rm -rf AnyKernel
+     - sleep 10s
      - bash clang_build.sh
      - rm -rf merlin
      - rm -rf clang
