--- a/.ci.yml
+++ b/.ci.yml
@@ -27,28 +27,13 @@ steps:
        from_secret: BUILD_HOST
    commands:
      - bash g_build.sh
-     - rm -rf merlin
-     - rm -rf clang
-     - rm -rf GCC64
-     - rm -rf GCC32
-     - rm -rf AnyKernel
-     - sleep 10s
-     - bash Sdclang_build.sh
-     - rm -rf merlin
-     - rm -rf clang
-     - rm -rf GCC64
-     - rm -rf GCC32
-     - rm -rf AnyKernel
+     - rm -rf merlin clang GCC64 GCC32 AnyKernel
      - sleep 10s
      - bash clang_build.sh
-     - rm -rf merlin
-     - rm -rf clang
-     - rm -rf AnyKernel
+     - rm -rf merlin clang AnyKernel
      - sleep 10s
      - bash proton11_build.sh
-     - rm -rf merlin
-     - rm -rf clang
-     - rm -rf AnyKernel
+     - rm -rf merlin clang AnyKernel
      - sleep 10s
      - bash dtc10_build.sh
 #     - rm -rf merlin
