--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - run:
           command: |
           git clone --depth=1 https://github.com/kentanglu/BuilderKernel -b new Script
-          bash Script/compiler/Gclang.sh
+          bash Script/compiler/clang/Gclang.sh
           
 workflows:
   version: 2.1
